RESOLVED FIXED239677
Web Inspector: request interception should not be guarded based on service workers
https://bugs.webkit.org/show_bug.cgi?id=239677
Summary Web Inspector: request interception should not be guarded based on service wo...
Devin Rousso
Reported 2022-04-22 16:48:55 PDT
.
Attachments
Patch (14.46 KB, patch)
2022-04-22 16:57 PDT, Devin Rousso
ews-feeder: commit-queue-
Patch (14.52 KB, patch)
2022-04-22 21:48 PDT, Devin Rousso
pangle: review+
Patch (14.57 KB, patch)
2022-04-25 11:08 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2022-04-22 16:57:26 PDT
Devin Rousso
Comment 2 2022-04-22 21:48:11 PDT
Patrick Angle
Comment 3 2022-04-23 10:25:46 PDT
Comment on attachment 458201 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=458201&action=review r=me > Source/WebCore/inspector/InspectorInstrumentation.cpp:848 > +bool InspectorInstrumentation::shouldInterceptRequestImpl(InstrumentingAgents& instrumentingAgents, ResourceLoader& loader) As far as I can tell, everything we do with the ResourceLoader can be done with a const ref – is there a reason we aren't passing `const ResourceLoader&` throughout instead? > Source/WebCore/inspector/agents/InspectorNetworkAgent.cpp:1121 > + return shouldIntercept(loader.request().url(), Protocol::Network::NetworkStage::Request); Nit: I think we can just `loader.url()`
Devin Rousso
Comment 4 2022-04-25 11:08:43 PDT
EWS
Comment 5 2022-04-25 16:15:30 PDT
Committed r293368 (249968@main): <https://commits.webkit.org/249968@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 458285 [details].
Radar WebKit Bug Importer
Comment 6 2022-04-25 16:16:16 PDT
Note You need to log in before you can comment on or make changes to this bug.