Web Inspector: request interception should not be guarded based on service workers https://bugs.webkit.org/show_bug.cgi?id=239677

Reviewed by Patrick Angle.

Source/WebCore:

* inspector/InspectorInstrumentation.h:
(WebCore::InspectorInstrumentation::shouldInterceptRequest):
(WebCore::InspectorInstrumentation::interceptRequest):
* inspector/InspectorInstrumentation.cpp:
(WebCore::InspectorInstrumentation::shouldInterceptRequestImpl):
* inspector/InspectorInstrumentationWebKit.h:
(WebCore::InspectorInstrumentationWebKit::shouldInterceptRequest):
(WebCore::InspectorInstrumentationWebKit::interceptRequest):
* inspector/InspectorInstrumentationWebKit.cpp:
(WebCore::InspectorInstrumentationWebKit::shouldInterceptRequestInternal):
Pass along `ResourceLoader` instead of `ResourceRequest` so that `InspectorNetworkAgent::shouldInterceptRequest`
can look at the configuration of the load (e.g. `serviceWorkerRegistrationIdentifier`), not
just the request configuration.

* inspector/agents/InspectorNetworkAgent.h:
* inspector/agents/InspectorNetworkAgent.cpp:
(WebCore::InspectorNetworkAgent::shouldInterceptRequest):
Move the `#if ENABLE(SERVICE_WORKER)` here.

Source/WebKit:

* WebProcess/Network/WebLoaderStrategy.cpp:
(WebKit::WebLoaderStrategy::scheduleLoad):
Move the `#if ENABLE(SERVICE_WORKER)` to `WebCore::InspectorNetworkAgent::shouldInterceptRequest`.

Canonical link: https://commits.webkit.org/249968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293368 268f45cc-cd09-0410-ab3c-d52691b4dbfc